css/style.css
:root{
  --main-font: 'Open Sans', sans-serif;
  --blue:rgb(0, 132, 253);
  --card:rgb(181, 221, 255);
  --background-violet:rgb(151, 146, 228);
  --free:rgb(253, 193, 95);
  --icon-blue:rgb(0, 132, 253);
  --footer:rgb(51, 51, 51);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.container {
  max-width: 1140px;
  margin: 0 auto;
}

body{
  font-family:var(--main-font)
}

.debug-box {
  background-color: rgba(255, 0, 0, .2);
  border: 1px solid black;
}
.debug > div {
  border: 1px solid black;
}

.d-flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.align-center {
  align-items: center;
}

.wrap {
  flex-wrap: wrap;
}

ul {
  list-style-type: none;
  color: white;
  }

/* header */

header { 
  background-color:var(--blue); 
}


header nav {
  padding: 10px 20px 10px 20px;
}

.desk-menu {
  display: none;
}

.desk-menu li {
  display: inline;
}

.btn {
  padding: 6px 30px;
  margin-top: 20px;
  margin-bottom: 20px;
  background-color: var(--background-violet);
  color: white;
  border-radius: 20px;
}
.btn:hover {
  cursor: pointer;
}

/* main */
/* intro section */
.row {
  display: flex;
  flex-direction: column;
}

.intro h4 {
  color: var(--icon-blue);
  padding: 20px 0 20px 0;
}

.intro p {
  color: rgb(90, 110, 127);
  font-size: 0.8rem;
}

.col {
  width: 100%;
}

.big-card ,.small-card {
  margin: 20px;
  padding: 20px;
  border-radius: 10px;
  justify-content: center;
  background-color: var(--card);
}

.small-card,.sx {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.small-card i {
  font-size: 4rem;
  color: var(--icon-blue);
}

.intro .col img {
  width: 208px;
}

/* planning section */

.planning {
  background-color: var(--background-violet);
  color: white;
}

.planning img {
  max-width: 70%;
}

.planning .card {
  flex-direction: column;
  margin: 20px;
  padding: 20px;
  border-radius: 10px;
  background-color: white;
  color: black;
}

.card img {
  max-width: 100%;
}

/* testimonials section */
.img-testimonial  {
  width:220px;
}

.text-testimonial {
  flex-direction: column;
  align-items: center;
}

.img-testimonial img {
  max-width: 100%;
  border-radius: 50%;
  padding-bottom: 20px;
}


/* benefits */

.benefits {
  background-color: var(--background-violet);
}

.benefits .small-card {
  background-color: white;
  align-items: start;
}

.benefits h3 {
  text-align: center;
  font-size: 1.5rem;
  color: white;
  padding: 30px 0 20px 0;
}

.benefits h4 {
  font-size: 2rem;
  color: var(--background-violet);
  padding-bottom: 20px;
}

.benefits h5 {
  font-size: 1.2rem;
  color: var(--background-violet);
  padding-bottom: 20px;
}

.benefits p {
  font-size: 0.7rem;
  color: gray;
}

/* about section  */
.about-text {
  width: 100%;
}

.about-img {
  width: 100%;
}

.about-img img {
  width: 50%;
}

/* get started */

.getstarted {
  background-color: var(--background-violet);
}

.cta {
  flex-direction: column;
  align-items: center;
  width: 100%; 
}

/* footer */

footer {
  background-color: var(--footer);
}

.footer {
  color: white;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

 @media screen and (min-width: 768px) { 
  .row {
    flex-direction: row;
  }


  .big-card .sx , .dx {
    width: 100%;
    align-items: start;
  }

  .intro .col {
    width: calc(100% /3);
  }

  .intro .col:first-child {
    width: 66.66%;
  }

  .benefits .col {
    width: 50%;
  }

  .testimonials .small-card {
    flex-direction: row;
    justify-content: start;
  }

  .testimonials .small-card .col {
    justify-content: start;
  }

  .img-testimonial img {
    padding-right: 30px;
  }

  .about-text {
    width: 60%;
  }
  
  .about-img {
    width: 40%;
  }

}

@media screen and (min-width: 992px) { 

  .burger {
    display: none;
  }

  .desk-menu {
    display: block;
  }
  
  .big-card .sx , .dx {
    width: 50%;
  }
  
  .benefits .col {
    width: calc(100% /3 );
  }
}

